test/asm/multi-line-strings.err
error: Unterminated string
    at multi-line-strings.asm(23)
warning: check the line number [-Wuser]
    at multi-line-strings.asm(35)
Assembly aborted with 1 error!
